--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forecast",
+  "name": "forecastdashboard",
   "version": "0.0.0",
   "description": "",
   "repository": "",
@@ -10,6 +10,7 @@
   "mainInput": "main",
   "mainOutput": "main",
   "dependencies": {
+    "jquery": "^2.1.3",
     "material-ui": "^0.7.0",
     "react": "~0.12.2",
     "react-router": "^0.11.6",
@@ -38,6 +39,7 @@
     "jshint-loader": "~0.8.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-clean": "~0.6.0",
+    "less-loader": "^2.0.0",
     "react-hot-loader": "^1.0.7"
   }
 }
