--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "forecast-dashboard",
-    "version": "0.0.3",
+    "version": "0.0.6",
     "description": "Forecast Dashboard Application",
     "repository": "",
     "private": true,
@@ -11,6 +11,12 @@
     "mainOutput": "main",
     "dependencies": {
         "jquery": "^2.1.3",
+        "koa": "^0.18.0",
+        "koa-bodyparser": "^1.3.1",
+        "koa-logger": "^1.2.2",
+        "koa-route": "^2.4.0",
+        "koa-send": "^1.3.1",
+        "koa-static": "^1.4.9",
         "material-ui": "^0.7.0",
         "react": "~0.12.2",
         "react-router": "^0.11.6",
