--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "forecast-dashboard",
-    "version": "0.1.9 beta",
+    "version": "0.1.9",
     "description": "Forecast Dashboard Application",
     "repository": "",
     "private": true,
@@ -19,6 +19,7 @@
         "koa-send": "^1.3.1",
         "koa-static": "^1.4.9",
         "material-ui": "^0.7.0",
+        "moment": "^2.9.0",
         "react": "~0.12.2",
         "react-router": "^0.11.6",
         "react-tap-event-plugin": "^0.1.4"
