--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mainInput": "main",
     "mainOutput": "main",
     "dependencies": {
+        "chart.js": "^1.0.1",
         "forecast": "^0.2.1",
         "jquery": "^2.1.3",
         "koa": "^0.18.0",
@@ -21,6 +22,7 @@
         "material-ui": "^0.7.0",
         "moment": "^2.9.0",
         "react": "~0.12.2",
+        "react-chartjs": "^0.5.0",
         "react-router": "^0.11.6",
         "react-tap-event-plugin": "^0.1.4"
     },
