--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
         "grunt-contrib-clean": "~0.6.0",
         "less-loader": "^2.0.0",
         "react-hot-loader": "^1.0.7"
+    },
+    "engines": {
+        "iojs": "*"
     }
 }
