--- a/package.json
+++ b/package.json
@@ -1,58 +1,59 @@
 {
-    "name": "forecast-dashboard",
-    "version": "1.0.3",
-    "description": "Forecast Dashboard Application",
-    "repository": "",
-    "private": true,
-    "src": "src",
-    "test": "test",
-    "dist": "dist",
-    "mainInput": "main",
-    "mainOutput": "main",
-    "dependencies": {
-        "chart.js": "^1.0.1",
-        "forecast": "^0.2.1",
-        "jquery": "^2.1.3",
-        "koa": "^0.18.0",
-        "koa-bodyparser": "^1.3.1",
-        "koa-logger": "^1.2.2",
-        "koa-route": "^2.4.0",
-        "koa-send": "^1.3.1",
-        "koa-static": "^1.4.9",
-        "material-ui": "^0.7.0",
-        "moment": "^2.9.0",
-        "react": "~0.12.2",
-        "react-chartjs": "^0.5.0",
-        "react-router": "^0.11.6",
-        "react-tap-event-plugin": "^0.1.4"
-    },
-    "devDependencies": {
-        "grunt": "~0.4.5",
-        "load-grunt-tasks": "~0.6.0",
-        "grunt-contrib-connect": "~0.8.0",
-        "webpack": "~1.4.3",
-        "jsx-loader": "~0.12.2",
-        "grunt-webpack": "~1.0.8",
-        "style-loader": "~0.8.0",
-        "url-loader": "~0.5.5",
-        "css-loader": "~0.9.0",
-        "karma-script-launcher": "~0.1.0",
-        "karma-chrome-launcher": "~0.1.4",
-        "karma-firefox-launcher": "~0.1.3",
-        "karma-jasmine": "~0.1.5",
-        "karma-phantomjs-launcher": "~0.1.3",
-        "karma": "~0.12.21",
-        "grunt-karma": "~0.8.3",
-        "karma-webpack": "~1.2.2",
-        "webpack-dev-server": "~1.6.5",
-        "grunt-open": "~0.2.3",
-        "jshint-loader": "~0.8.0",
-        "grunt-contrib-copy": "~0.5.0",
-        "grunt-contrib-clean": "~0.6.0",
-        "less-loader": "^2.0.0",
-        "react-hot-loader": "^1.0.7"
-    },
-    "engines": {
-        "iojs": "*"
-    }
+  "name": "forecast-dashboard",
+  "version": "1.0.3",
+  "description": "Forecast Dashboard Application",
+  "repository": "",
+  "private": true,
+  "src": "src",
+  "test": "test",
+  "dist": "dist",
+  "mainInput": "main",
+  "mainOutput": "main",
+  "dependencies": {
+    "chart.js": "^1.0.1",
+    "express": "^4.12.3",
+    "forecast": "^0.2.1",
+    "jquery": "^2.1.3",
+    "koa": "^0.18.0",
+    "koa-bodyparser": "^1.3.1",
+    "koa-logger": "^1.2.2",
+    "koa-route": "^2.4.0",
+    "koa-send": "^1.3.1",
+    "koa-static": "^1.4.9",
+    "material-ui": "^0.7.0",
+    "moment": "^2.9.0",
+    "react": "~0.12.2",
+    "react-chartjs": "^0.5.0",
+    "react-router": "^0.11.6",
+    "react-tap-event-plugin": "^0.1.4"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "load-grunt-tasks": "~0.6.0",
+    "grunt-contrib-connect": "~0.8.0",
+    "webpack": "~1.4.3",
+    "jsx-loader": "~0.12.2",
+    "grunt-webpack": "~1.0.8",
+    "style-loader": "~0.8.0",
+    "url-loader": "~0.5.5",
+    "css-loader": "~0.9.0",
+    "karma-script-launcher": "~0.1.0",
+    "karma-chrome-launcher": "~0.1.4",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-jasmine": "~0.1.5",
+    "karma-phantomjs-launcher": "~0.1.3",
+    "karma": "~0.12.21",
+    "grunt-karma": "~0.8.3",
+    "karma-webpack": "~1.2.2",
+    "webpack-dev-server": "~1.6.5",
+    "grunt-open": "~0.2.3",
+    "jshint-loader": "~0.8.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-clean": "~0.6.0",
+    "less-loader": "^2.0.0",
+    "react-hot-loader": "^1.0.7"
+  },
+  "engines": {
+    "iojs": "*"
+  }
 }
