Add node 0.12.x to package.json

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "react-hot-loader": "^1.0.7"
     },
     "engines": {
-        "iojs": "*"
+        "iojs": "*",
+        "node": ">=0.12.x"
     }
 }
